--- a/index.html
+++ b/index.html
@@ -154,13 +154,13 @@
             <h2>Our Branches</h2>
             <div class="branch">
                 <h3>Branch 1 صيدلية د أحمد الطوخي</h3>
-                <p> <img src="icons8-location-50.png" alt="Location Logo"> <a href="https://maps.app.goo.gl/JNZZaMGeBZupUSq37" target="_blank">47 شارع عبدالكريم الخطابي - الحضرة البحرية امام نقطة شرطة الابراهيمية</a></p>
+                <p> <img src="icons8-location-50.png" alt="Location Logo"> <a href="https://maps.app.goo.gl/4uDFgXAcEWHGB4hA6" target="_blank">47 شارع عبدالكريم الخطابي - الحضرة البحرية امام نقطة شرطة الابراهيمية</a></p>
                 <p> <img src="icons8-whatsapp-48.png" alt="WhatsApp Logo"> <a href="https://wa.me/201559568008" target="_blank">01559568008</a></p>
                 <p> <img src="icons8-landline-68.png" alt="Landline Logo"> 034268008</p>
             </div>
             <div class="branch">
                 <h3>Branch 2 صيدلية د كمال محيي الدين</h3>
-                <p> <img src="icons8-location-50.png" alt="Location Logo"> <a href="https://maps.app.goo.gl/JNZZaMGeBZupUSq37" target="_blank">158 عمر لطفي - سبورتينج الصغري امام محطة ترام سبورتينج الصغري</a></p>
+                <p> <img src="icons8-location-50.png" alt="Location Logo"> <a href="https://maps.app.goo.gl/g133suQeJFAsU3YB9" target="_blank">158 عمر لطفي - سبورتينج الصغري امام محطة ترام سبورتينج الصغري</a></p>
                 <p> <img src="icons8-whatsapp-48.png" alt="WhatsApp Logo"> <a href="https://wa.me/201068257579" target="_blank">01068257579</a></p>
                 <p> <img src="icons8-landline-68.png" alt="Landline Logo"> 035913821</p>
             </div>
@@ -180,7 +180,8 @@
         </section>
     </main>
     <footer>
-        <p>© 2024 Moamen Pharmacy. All rights reserved. صيادلة متميزين في خدمتك </p>
+        <p>صيادلة متميزين في خدمتك </p>
+        <p>© 2024 Moamen Pharmacy. All rights reserved.</p>
     </footer>
 </body>
 </html>
