--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     </main>
     <footer>
         <p>صيادلة متميزين في خدمتك </p>
-        <p>© 2024 Moamen Pharmacy. All rights reserved.</p>
+        <p>© 2024 Dr Moamen Pharmacy. All rights reserved.</p>
     </footer>
 </body>
 </html>
